--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 project(example)
-
+set(CMAKE_VERBOSE_MAKEFILE ON)
 list(PREPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 # Libigl
@@ -8,8 +8,13 @@ include(libigl)
 
 # Enable the target igl::glfw
 igl_include(glfw)
+include_directories(stylization)
+
+add_library(stylization stylization/stylization.cpp)
+target_link_libraries(stylization igl::core igl::glfw)
+
 
 # Add your project files
 file(GLOB SRC_FILES *.cpp)
 add_executable(${PROJECT_NAME} ${SRC_FILES})
-target_link_libraries(${PROJECT_NAME} PUBLIC igl::glfw)
+target_link_libraries(${PROJECT_NAME} PUBLIC igl::glfw stylization)
